tests/js_error/source_locations/expression/array/spread_get_iterator.exp
Error: 
  ┌ source_locations/expression/array/spread_get_iterator.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at <anonymous> (source_locations/expression/array/spread_get_iterator.js:3:11)
  at <global> (source_locations/expression/array/spread_get_iterator.js:7:2)